# 5_build_dashboard

./: ekgdata.py  main.py  person_class.py  pyproject.toml  read_person_data.py
