[project]
name = "5_build_dashboard"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dh823", email = "dh8239@mci4me.at"},
]
dependencies = ["pandas>=2.3.0", "matplotlib>=3.10.3", "plotly>=6.1.2", "streamlit>=1.45.1", "numpy>=2.2.6", "datetime>=5.5"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
